<resources>
    <string name="app_name">TravelPackgingList</string>
    <string name="app_title">TravelPackgingList</string>
    <string name="hint_item">Item name</string>
    <string name="category">Category</string>
    <string name="hint_comments">Comments</string>
    <string name="hint_quantity">Quantity</string>

    <string name="btn_add">Add to Packging List</string>
    <string name="btn_View">View List</string>
    <string name="btn_Exit">Exit</string>
</resources>