<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_title"
        android:textSize="24sp"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_marginBottom="24dp"/>

    <EditText
        android:id="@+id/etItem"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:hint="@string/hint_item"
        android:inputType="text"
        android:layout_marginBottom="12dp"
        android:autofillHints="name"/>

    <EditText
        android:id="@+id/etCategory"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:hint="@string/category"
        android:inputType="text"
        android:autofillHints="name"
        android:layout_marginBottom="12dp"
        android:layout_marginTop="10dp"/>

    <EditText
        android:id="@+id/etComments"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:hint="@string/hint_comments"
        android:inputType="text"
        android:layout_marginBottom="12dp"
        android:autofillHints="name"/>

    <EditText
        android:id="@+id/etQuantity"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:hint="@string/hint_quantity"
        android:autofillHints="name"
        android:layout_marginBottom="12dp"
        android:inputType="number"/>

    <Button
        android:id="@+id/btnAdd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_add"
        android:layout_marginBottom="12dp"/>

    <Button
        android:id="@+id/btnView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_View"
        android:height="48dp"
        android:layout_marginBottom="12dp"/>

    <Button
        android:id="@+id/btnExit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_Exit"
        android:height="48dp"
        android:layout_marginBottom="12dp"/>


</LinearLayout>